# useful-api

./: .envrc  AGENTS.md  Cargo.toml  README.md  flake.nix  module.nix  package.nix
.github/: dependabot.yml
.github/workflows/: nix.yml
src/: api.rs  main.rs
src/common/: bitcoin.rs  constants.rs  mod.rs
src/endpoints/: alditowels.rs  congressbeer.rs  hello.rs  mensabeer.rs  mensagorgonzola.rs  mensatoshi.rs  mod.rs  random.rs  root.rs  shark.rs  teapot.rs
src/rendering/: html.rs  markdown.rs  mod.rs  plaintext.rs  shell.rs
